# chia-l2-consensus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  attempts.md  build.rs
.cursor/rules/: gitnexus.mdc  octocode.mdc  repomix.mdc  wiki.mdc
.github/workflows/: ci.yml  publish.yml
docs/design/: CHECKPOINT_FORGERY_ATTACK_MATRIX.md
docs/prompt/: prompt-architecture.md  prompt-workflow.md  prompt.md  start.md
docs/prompt/tools/: README.md
docs/prompt/tree/: README.md  dt-authoritative-sources.md  dt-git.md  dt-hard-rules.md  dt-paths.md  dt-role.md  dt-tools.md  dt-wf-commit.md  dt-wf-gather-context.md  dt-wf-implement.md  dt-wf-select.md  dt-wf-test.md  dt-wf-update-tracking.md  dt-wf-validate.md
docs/requirements/: ADDING_REQUIREMENTS.md  IMPLEMENTATION_ORDER.md  README.md  REQUIREMENTS_REGISTRY.yaml  SCHEMA.md
docs/requirements/domains/: README.md
docs/requirements/domains/checkpoint/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/circuit/: DESIGN_DECISIONS.md  NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/crate_api/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/deployment/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/indexer/: NORMATIVE.md  (+2 more)
docs/resources/: chip-groth16-l2-consensus.md  quick-reference.md  spec-checkpoint-singleton.md  spec-clvm-costs.md  spec-consensus-crate.md  spec-deployment-runbook.md  spec-groth16-circuit.md  spec-indexer.md  spec-l2-integration.md  spec-registration-coin.md  spec-security.md  spec-sparse-merkle-tree.md  spec-trusted-setup.md  spec-validator-onboarding.md  spec-wire-format.md  spec-withdraw-delay-coin.md
puzzles/: checkpoint_inner.rue  network_coin_inner.rue  registration_coin.rue  withdraw_delay_coin.rue
puzzles/compiled/: checkpoint_inner.hash  checkpoint_inner.hex  network_coin_inner.hash  network_coin_inner.hex  registration_coin.hash  registration_coin.hex  withdraw_delay_coin.hash  withdraw_delay_coin.hex
src/: client.rs  config.rs  error.rs  lib.rs  state.rs  testing.rs
src/indexer/: cache.rs  chain.rs  mod.rs  reorg.rs  validator_set.rs
src/merkle/: mod.rs  poseidon.rs  proof.rs  sparse.rs
src/prover/: aggregate.rs  circuit.rs  g1_gadget.rs  majority.rs  mod.rs  prove.rs  serialize.rs  setup.rs
src/puzzles/: checkpoint.rs  deploy.rs  mod.rs  network_coin.rs  registration_coin.rs  withdraw_delay.rs
src/validator/: exit.rs  keygen.rs  mod.rs  registration.rs  signing.rs
tests/: debug_chk_query.rs  debug_clvm_env.rs  harness_smoke_test.rs  vv_req_api_001.rs  vv_req_api_002.rs  vv_req_api_003.rs  vv_req_api_004.rs  vv_req_api_005.rs  vv_req_api_006.rs  vv_req_api_008.rs  vv_req_chk_001_to_007.rs  vv_req_chk_003.rs  vv_req_chk_008.rs  vv_req_chk_009.rs  vv_req_chk_010.rs  vv_req_chk_011.rs  vv_req_chk_012.rs  vv_req_chk_013.rs  vv_req_chk_014.rs  vv_req_chk_015.rs  vv_req_cir_001.rs  vv_req_cir_002.rs  vv_req_cir_003.rs  vv_req_cir_003_constraint.rs  vv_req_cir_004.rs  vv_req_cir_005.rs  vv_req_cir_006.rs  vv_req_dep_001.rs  vv_req_dep_002.rs  vv_req_dep_003.rs  vv_req_dep_004.rs  vv_req_dep_005.rs  vv_req_idx_001.rs  vv_req_idx_002.rs  vv_req_idx_003.rs  vv_req_idx_004.rs  vv_req_idx_005.rs  vv_req_net_001.rs  vv_req_net_002.rs  vv_req_net_003.rs  (+62 more)
tests/common/: clvm.rs  mod.rs  sim.rs
(+135 files in other folders)
