[package]
name    = "chia-l2-consensus"
version = "0.2.1"
edition = "2021"

[dependencies]
# Chia — versions aligned with chia-wallet-sdk 0.18's internal chain (v0.15/v0.9)
# to avoid type incompatibilities between main crate and SDK test infrastructure
chia-wallet-sdk = "0.18"
chia-protocol   = "0.15"
chia-puzzles    = "0.15"
chia-bls        = "0.15"
clvm-traits     = "0.15"
clvm-utils      = "0.15"    # curry_tree_hash, tree_hash (used by indexer lineage check)
clvmr           = "0.9"

# ZK proving (→ see spec-groth16-circuit — Dependencies)
ark-groth16           = "0.4"
ark-bls12-381         = "0.4"
ark-r1cs-std          = "0.4"
ark-relations         = "0.4"
ark-ff                = "0.4"
ark-ec                = "0.4"
ark-std               = "0.4"
ark-serialize         = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["crh", "r1cs"] }

# BLS aggregation off-chain (→ see spec-wire-format — Aggregate Signature)
blst = "0.3"

# Async
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
hex          = "0.4"
num-bigint   = "0.4"

# Error handling
thiserror = "1"
anyhow    = "1"

sha2 = "0.10"

# Blockchain queries (RPC-001) — decentralized peers + coinset.org fallback
chia-query = "0.2"

# Wallet integration (RPC-005) — coin selection for collateral funding.
# Engine-only seam: this crate never signs, so it never links the client-seam signer
# (dig-wallet-backend SPEC §1.3 — an engine consumer depends with default-features off).
dig-wallet-backend = { version = "0.4", default-features = false, features = ["engine"] }

# Chia SDK — wallet operations, spend bundles, singleton handling
chia-sdk-driver = "0.18"   # SpendContext, StandardLayer, Launcher

[dev-dependencies]
tokio          = { version = "1", features = ["full"] }
rand           = "0.8"
chia-sdk-test  = "0.18"    # Simulator, test_secret_key, sign_transaction
chia-sdk-types = "0.18"    # Conditions
clvm-utils     = "0.15"    # CurriedProgram, tree_hash (aligned with SDK)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
